<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/call_user_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_face_open"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@drawable/bt_shape"
            android:text="@string/face_open"
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_auto_open"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@drawable/bt_shape"
            android:text="@string/auto_open"
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_call_open"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@drawable/bt_shape"
            android:text="@string/call_open"
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </LinearLayout>


</LinearLayout>