<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SetLoginPsdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#1B9AFE"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_setback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_weight="0"
            android:background="@drawable/common_ic_exit" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16.3dp"
            android:background="#1F000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/fix_login_password"
            android:textColor="#FFFFFFFF"
            android:textSize="32dp" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:text="保存"
            android:textColor=" #FFFFFF"
            android:textSize="30dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_setoldpsd"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/put_old_psd"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:password="true"
        android:singleLine="true"
        android:textColor="#666666"
        android:textColorHint=" #999999"
        android:textSize="30dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E6E6E6" />

    <EditText
        android:id="@+id/et_setnewpsd"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/put_new_psd"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:password="true"
        android:singleLine="true"
        android:textColor="#666666"
        android:textColorHint=" #999999"
        android:textSize="30dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E6E6E6" />

    <EditText
        android:id="@+id/et_setnewpsdagain"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/put_new_psd_again"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:password="true"
        android:singleLine="true"
        android:textColor="#666666"
        android:textColorHint=" #999999"
        android:textSize="30dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E6E6E6" />

</LinearLayout>