<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#1B9AFE"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_setback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:background="@drawable/common_ic_exit" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16.3dp"
            android:background="#1F000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="#FFFFFFFF"
            android:textSize="32dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <!--<TextView-->
        <!--android:id="@+id/tv_set_time"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="80dp"-->
        <!--android:background="#FFFFFF"-->
        <!--android:drawablePadding="10dp"-->
        <!--android:drawableRight="@drawable/arrow"-->
        <!--android:gravity="center_vertical"-->
        <!--android:paddingLeft="24dp"-->
        <!--android:paddingRight="24dp"-->
        <!--android:singleLine="true"-->
        <!--android:text="@string/set_time"-->
        <!--android:textColor="#666666"-->
        <!--android:textSize="30dp" />-->

    <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="#E6E6E6" />-->

    <TextView
        android:id="@+id/tv_setloginpsd"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#FFFFFF"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/arrow"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:singleLine="true"
        android:text="@string/set_login_password"
        android:textColor="#666666"
        android:textSize="30dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E6E6E6" />

    <TextView
        android:id="@+id/tv_setopenpsd"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#FFFFFF"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/arrow"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:singleLine="true"
        android:text="@string/set_open_password"
        android:textColor="#666666"
        android:textSize="30dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E6E6E6" />

    <TextView
        android:id="@+id/tv_setopenchoose"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#FFFFFF"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/arrow"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:singleLine="true"
        android:text="@string/set_open_choose"
        android:textColor="#666666"
        android:textSize="30dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E6E6E6" />
</LinearLayout>