<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SetChooseOpenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#1B9AFE"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_setback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_weight="0"
            android:background="@drawable/common_ic_exit" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16.3dp"
            android:background="#1F000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/fix_open_door_choose"
            android:textColor="#FFFFFFFF"
            android:textSize="32dp" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:text="保存"
            android:textColor=" #FFFFFF"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/et_setoldpsd"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:singleLine="true"
            android:text="@string/chip_open"
            android:textColor="#666666"
            android:textColorHint=" #999999"
            android:textSize="30dp" />

        <Switch
            android:id="@+id/switch_chipopen"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="5"
            android:checked="true"
            android:paddingRight="20dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E6E6E6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/et_tsd_open"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:singleLine="true"
            android:text="@string/tsd_open"
            android:textColor="#666666"
            android:textColorHint=" #999999"
            android:textSize="30dp" />

        <Switch
            android:id="@+id/switch_tsdpopen"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="5"
            android:checked="true"
            android:paddingRight="20dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E6E6E6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/et_psd_code_open"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:singleLine="true"
            android:text="@string/psd_code_open"
            android:textColor="#666666"
            android:textColorHint=" #999999"
            android:textSize="30dp" />

        <Switch
            android:id="@+id/switch_psd_code_open"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="5"
            android:checked="true"
            android:paddingRight="20dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E6E6E6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/et_psd_open"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:singleLine="true"
            android:text="@string/psd_open"
            android:textColor="#666666"
            android:textColorHint=" #999999"
            android:textSize="30dp" />

        <Switch
            android:id="@+id/switch_psdpopen"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="5"
            android:checked="true"
            android:paddingRight="20dp" />
    </LinearLayout>
</LinearLayout>